--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="page-1.css" />
+    <link rel="stylesheet" href="btn.css" />
+    <link rel="stylesheet" href="btn-2.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <title>Happy Woman's day 20/10</title>
   </head>
@@ -25,7 +28,7 @@
     <div class="container-1">
       <div id="step-1-1">
         <div class="text-hello slide-in-blurred-top">
-          🎀 Hello, beautiful lady🌸. I hope you're having a wonderful day. 🎀
+          🎀 Hello, beautiful ladies🌸. I hope you're having a wonderful day. 🎀
         </div>
         <div class="btn-2">
           <button id="button">click me</button>
