--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="container-1">
       <div id="step-1-1">
         <div class="text-hello slide-in-blurred-top">
-          🎀 Hello, beautiful ladies🌸. I hope you're having a wonderful day. 🎀
+          🎀 Hello, beautiful lady🌸. I hope you're having a wonderful day. 🎀
         </div>
         <div class="btn-2">
           <button id="button">click me</button>
