--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="shortcut icon"
+      href="https://scontent.fsgn2-7.fna.fbcdn.net/v/t39.30808-1/476227963_2385998665083690_5410687272317533950_n.jpg?stp=dst-jpg_s200x200_tt6&_nc_cat=108&ccb=1-7&_nc_sid=e99d92&_nc_ohc=YyMfdhdovFoQ7kNvgGPGnW3&_nc_oc=AdhLvmM5mAlqwvJhMesCwJs8X7IYSmQjmsJSX5p9JunO4ABkLvS06ltqAdA9T-LFYpK5OpLUmoczeGgncd40S4yD&_nc_zt=24&_nc_ht=scontent.fsgn2-7.fna&_nc_gid=CUL9iXGWRqV9dk8zcc2CPQ&oh=00_AYFrOYYj8jLVtC3TOVDfxoD2GcG5LYmMp5owta_CO9QmXw&oe=67DA30C9"
+      type="image/x-icon"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -15,7 +20,7 @@
     <link rel="stylesheet" href="btn.css" />
     <link rel="stylesheet" href="btn-2.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
-    <title>Happy Woman's day 20/10</title>
+    <title>Happy Birthday To MTea</title>
   </head>
 
   <body class="not-loaded">
@@ -28,7 +33,7 @@
     <div class="container-1">
       <div id="step-1-1">
         <div class="text-hello slide-in-blurred-top">
-          🎀 Hello, beautiful lady🌸. I hope you're having a wonderful day. 🎀
+          🎀 Hello, Tea nhe. Chúc mừng sinh nhật nè he 🎀
         </div>
         <div class="btn-2">
           <button id="button">click me</button>
@@ -44,7 +49,7 @@
       </div>
       <div id="step-1-2">
         <div class="text-hello slide-in-blurred-top">
-          🎀 Today is your day, so I want to send you my best wishes. 🎀
+          🎀 Today is your day, so I want to send you my best wishes 🎀
         </div>
         <div class="btn-container">
           <div id="btn-smash" class="bounce-top">
@@ -71,7 +76,7 @@
     </div>
     <div class="container-2">
       <div class="night"></div>
-      <div class="happy-woman-day">𝓗𝓪𝓹𝓹𝔂 𝔀𝓸𝓶𝓮𝓷'𝓼 𝓭𝓪𝔂 2️⃣0️⃣/1️⃣0️⃣</div>
+      <div class="happy-woman-day">𝓗𝓪𝓹𝓹𝔂 𝓑𝓲𝓻𝓽𝓱𝓭𝓪𝔂 𝓽𝓸 𝓜𝓣𝓮𝓪 2️⃣6️⃣/0️⃣2️⃣</div>
       <div class="flowers">
         <div class="flower flower--1">
           <div class="flower__leafs flower__leafs--1">
